tests/type/errors/bad_length1.xi
foo() {
    x:int = length(1)
}